Fix loader z-index

--- a/assets/styl/App/Loader.styl
+++ b/assets/styl/App/Loader.styl
@@ -31,7 +31,7 @@
 
 #__loader
   background-color var(--h-color-background-level-1)
-  z-index 9999
+  z-index 10000
   position fixed
   top 0
   width 100%
